--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,14 @@
     <artifactId>Vvedenie_v_avtomation_testing</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- Переменные -->
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <junit.version>5.7.2</junit.version>
+        <sql.version>3.42.0.0</sql.version>
+        <hibernate-version>5.4.0.Final</hibernate-version>
+        <flyway.version>8.5.13</flyway.version>
         <surefire.version>2.22.2</surefire.version>
     </properties>
 
@@ -20,7 +24,7 @@
 
     <name>Демо проект</name>
     <description>Демонстрационный проект для курса введения в автоматизацию</description>
-    <url>http://demo.org.max.org</url>
+    <url>http://demo.max.org</url>
 
     <!-- Зависимости -->
     <dependencies>
@@ -37,12 +41,37 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- Лекция 4. SQLite -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${sql.version}</version>
+        </dependency>
+        <!-- Лекция 4. Диалект -->
+        <dependency>
+            <groupId>com.zsoltfabok</groupId>
+            <artifactId>sqlite-dialect</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <!-- Лекция 4. ORM -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate-version}</version>
+        </dependency>
+
     </dependencies>
 
     <!-- Сборка -->
     <build>
         <plugins>
-            <!-- Plugin для компиляции исходных кодов -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -51,7 +80,21 @@
                     <target>17</target>
                 </configuration>
             </plugin>
-            <!-- Plugin для запуска тестовых классов - т.е. запуск тестов -->
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>${flyway.version}</version>
+                <configuration>
+                    <baselineOnMigrate>true</baselineOnMigrate>
+                    <!--<user>user</user>
+                    <password>password</password>
+                    <schemas>
+                        <schema>schemaName</schema>
+                    </schemas>  -->
+                    <url>jdbc:sqlite:seminar.db</url>
+                    <locations>filesystem:db/seminar/migration</locations>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
