--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,17 @@
     <artifactId>Vvedenie_v_avtomation_testing</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- Переменные -->
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <junit.version>5.7.2</junit.version>
+        <logback.version>1.3.5</logback.version>
+        <slf4j.version>2.0.4</slf4j.version>
+        <mockito.version>5.3.1</mockito.version>
+        <wiremock.version>1.58</wiremock.version>
         <surefire.version>2.22.2</surefire.version>
+        <jackson.version>2.15.0</jackson.version>
     </properties>
 
     <!-- Архивирование -->
@@ -20,7 +26,7 @@
 
     <name>Демо проект</name>
     <description>Демонстрационный проект для курса введения в автоматизацию</description>
-    <url>http://demo.org.max.org</url>
+    <url>http://demo.max.org</url>
 
     <!-- Зависимости -->
     <dependencies>
@@ -37,12 +43,61 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Лекция 3. Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <!-- Лекция 5. Логирование -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <!-- Лекция 5. Мокирование -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Лекция 5. WireMock -->
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>${wiremock.version}</version>
+            <!--          <scope>test</scope>-->
+        </dependency>
+
     </dependencies>
 
     <!-- Сборка -->
     <build>
         <plugins>
-            <!-- Plugin для компиляции исходных кодов -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -51,7 +106,6 @@
                     <target>17</target>
                 </configuration>
             </plugin>
-            <!-- Plugin для запуска тестовых классов - т.е. запуск тестов -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
