--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
                     закомментируйте строку-->
                     <!--<reportVersion>2.4.1</reportVersion>-->
                     <!-- Добавим адрес директории для генератора отчета -->
-                    <buildDirectory>C:\Alexander\GeekBrains\JavaRepo\</buildDirectory>
+                    <buildDirectory>C:\Alexander\GeekBrains\JavaRepo</buildDirectory>
                 </configuration>
             </plugin>
 
